Fixed name overflow and plugin settings close button.

--- a/css/main.css
+++ b/css/main.css
@@ -1674,9 +1674,16 @@
 }
 
 .bda-slist .bda-name {
-  color:#87909C;
+    color:#87909C;
     font-weight:700;
     font-size:12px;
+    overflow: hidden;
+    display: block;
+    max-height: 12px;
+}
+
+.bda-slist li div:not(.bda-right):nth-of-type(2) {
+    margin-top: 30px;
 }
 
 .bda-slist .bda-description {
